--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div  class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
       <!-- <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600"> -->
       <div class="text-center lg:w-2/3 w-full">
-        <h1  class="title-font text-4xl sm:text-4xl text-3xl  sm-mt-2  mb-4 font-medium text-white">UIUX Designer and Developer</h1>
-        <p class="mb-8 text-xl sm:text-l text-gray-300  leading-relaxed"> <span class="text-3xl">Hiii....</span> this is <span class="text-yellow-500 text-2xl">GOURI</span> an UIUX designer with a passion for designing beautiful and functional user experiences and and ui design ,and also the Front end Developer who focuses on writing clean, elegant and efficient code  </p>
+        <h1  class="title-font text-4xl sm:text-4xl text-3xl  sm-mt-2  mb-4 font-medium text-white">DevOps Engineer</h1>
+        <p class="mb-8 text-xl sm:text-l text-gray-300  leading-relaxed"> <span class="text-3xl">Hiii....</span> this is <span class="text-yellow-500 text-2xl">GOURI</span> a DevOps Engineer with a passion for building scalable, reliable, and automated systems. I specialize in cloud infrastructure, CI/CD pipelines, and deployment automation to ensure smooth development workflows and efficient delivery. </p>
         <div class="flex justify-center">
           <a href="no-script.html" id="btndownload"><button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Download Resume <i class="fa fa-download align-center ml-2 mt-1"></i></button></a>
           <!-- <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button> -->
