--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
         <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
       </div>
       <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-left text-left">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">UIUX Designer and Developer</h1>
-        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">DATA ENGINEER</h1>
+        <p class="mb-8 leading-relaxed">Hi, Gouri here, Results-oriented Data Engineer with 3+ years of experience in building scalable data 
+         solutions using PySpark, AWS Services, and Databricks. Proven ability to deliver high-quality software while managing end-to-end data workflows, including 
+         ingestion, transformation and deployment. Seeking to apply my skills in Big Data and Cloud Technologies to drive impactful and efficient data-driven 
+         solutions.</p>
         <div class="flex justify-center">
           <a href="no-script.html" id="btndownload" ><button  class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600  hover:text-white rounded text-lg">Download Resume <i class="fa fa-download align-center ml-2 mt-1"></i></button>
           </a>             
